# quicksettings

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
quicksettings/: __init__.py  base.py  utils.py
tests/: conftest.py  test_nested_dataclass_settings.py  test_nested_dataclasses.py  test_settings.py
