[project]
name = "quicksettings"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mvbosch", email = "michael@vonbosch.co.za" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quicksettings"]
