[project]
name = "quicksettings"
version = "1.1.0"
description = "Manage python application config with ease."
authors = [
    { name = "mvbosch", email = "michael@vonbosch.co.za" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quicksettings"]
